[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.package]
authors = ["Unicity Labs <devs@unicity-labs.com"]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT"
repository = "https://github.com/unicitynetwork/unicity-prism"
homepage = "https://www.unicity-labs.com"
readme = "README.md"

[workspace.dependencies]
alloy-primitives = "1.2.1"
alloy-consensus = "1.0.16"
alloy-evm = "0.12.3"
alloy-rlp = "0.3.12"
alloy-rpc-types = "1.0"
directories = "6.0.0"
sha2 = "0.10.9"
hex = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
revm = { version = "26.0.1", default-features = false, features = ["std"] }
op-revm = { version = "7.0.1", default-features = false, features = ["std"] }

# Dev dependencies
anyhow = "1"
tokio-test = "0.4.4"

[workspace.lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }
missing_docs = { level = "warn", priority = -1 }
missing_debug_implementations = { level = "warn", priority = -1 }
missing_copy_implementations = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Security lints - deny these completely
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"
indexing_slicing = "deny"  # No direct array[i] access
integer_arithmetic = "deny"  # Prevent overflow
float_arithmetic = "deny"

# Must be explicit about error handling
result_unwrap_used = "deny"
option_unwrap_used = "deny"

# Memory safety
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"

# Code quality
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
correctness = "deny"
suspicious = "deny"

# Math specific
integer_overflow = "deny"
lossy_float_literal = "deny"

