[package]
name = "alpha-p2p"
description = "Alpha P2P networking library for Unicity Prism"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
bitcoin = { version = "0.32.7", features = ["base64", "rand", "serde"] }
bitcoin-units = "0.2.0"
tokio.workspace = true
sha2.workspace = true
serde.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
