[package]
name = "alpha-p2p"
description = "Alpha P2P networking library for Unicity Prism"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
alpha-p2p-derive = { path = "../alpha-p2p-derive" }
bitcoin = { version = "0.32.7", features = ["base64", "rand", "serde"] }
bitcoin-units = "0.2.0"
chrono.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
directories.workspace = true
tokio.workspace = true
rand.workspace = true
sha2.workspace = true
serde.workspace = true
thiserror.workspace = true
hex.workspace = true
primitive-types = { version = "0.14.0", features = ["serde"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
