[package]
name = "unicity-prism-common"
description = "Common utilities and types for Unicity Prism"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
unicity-prism-derive = { path = "../derive" }
bitcoin = { version = "0.32.7", features = ["base64", "rand", "serde"] }
bitcoin-units = "0.2.0"
chrono.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
directories.workspace = true
rand.workspace = true
redb = "2.1.0"
sha2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
primitive-types = { version = "0.14.0", features = ["serde"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "time"] }
tokio-util = "0.7"

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.23.0"

[lints]
workspace = true
