[package]
name = "unicity-prism-derive"
description = "Procedural macros for consensus encoding/decoding"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
bitcoin = { version = "0.32.7", features = ["base64", "rand", "serde"] }

[dev-dependencies]
trybuild = "1.0"

[lints]
workspace = true
